force-app/main/default/objects/EBSC_CaseComponent__mdt/EBSC_CaseComponent__mdt.object-meta.xml
<CustomObject>
    <label>EBSC CaseComponent</label>
    <pluralLabel>EBSC CaseComponents</pluralLabel>
</CustomObject>