force-app/main/default/objects/EBSC_CaseComponent__mdt/fields/Case_Description_Template__c.field-meta.xml
<CustomField>
    <fullName>Case_Description_Template__c</fullName>
    <label>Case_Description_Template</label>
    <length>20</length>
    <type>Text</type>
</CustomField>