force-app/main/default/objects/EBSC_CaseComponent__mdt/fields/EBSC_Case_Interface__c.field-meta.xml
<CustomField>
    <fullName>EBSC_Case_Interface__c</fullName>
    <label>EBSC CaseInterface</label>
    <referenceTo>EBSC_CaseInterface__mdt</referenceTo>
    <relationshipLabel>EBSC CaseComponents</relationshipLabel>
    <relationshipName>EBSC_CaseComponents</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>