force-app/main/default/objects/EBSC_CaseComponent__mdt/fields/MasterLabel__c.field-meta.xml
<CustomField>
    <fullName>MasterLabel__c</fullName>
    <label>MasterLabel</label>
    <length>10</length>
    <type>Text</type>
</CustomField>